Fixed overflow

--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+html {
+    overflow-x: hidden;
+}
+
 body {
     /* font-family: 'Montserrat', sans-serif; */
     font-family: 'Roboto', sans-serif;
